Fri Mar 22 10:09:55 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* error.c (error, fperror): Exit with status EXIT_FAILURE rather
	than STATUS.  We had been neglecting to check for 256, and the
	value of providing a count of errors is probably minimal anyway.
	* add.c, modules.c, mkmodules.c, tag.c, server.c, main.c,
	import.c, client.c, scramble.c, recurse.c: Exit with status
	EXIT_FAILURE rather than 1.  On VMS, 1 is success, not failure.
	* main.c (main): Return EXIT_FAILURE or 0.  The value of providing
	a count of errors is minimal.

	* client.c (init_sockaddr): Exit with status 1 rather than
	EXIT_FAILURE.  The latter apparently doesn't exist on SunOS4.
	Reindent function.

Mon Mar 18 14:28:00 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h, ignore.c: New variable ign_case.
	* ignore.c (ign_name): If it is set, match in a case-insensitive
	fashion.
	* server.c (serve_case): New function.
	(requests): Add Case request.
	* client.c (start_server): If FILENAMES_CASE_INSENSITIVE is
	defined, send Case request.

Sat Mar 16 08:20:01 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	For reference, this change takes cvs's text segment from 315392
	bytes to 311296 bytes (one 4096 byte page).
	* cvs.h (struct file_info): Add fullname field.
	* recurse.c (do_file_proc): Set it.
	* commit.c (find_fileproc), client.c (send_fileproc), commit.c
	(check_fileproc), diff.c (diff_fileproc), edit.c
	(unedit_fileproc), patch.c (patch_fileproc), remove.c
	(remove_fileproc), rtag.c (rtag_fileproc), tag.c (tag_fileproc),
	update.c (update_fileproc), watch.c (watchers_fileproc): Use it
	instead of computing it each time.
	* diff.c (diff_fileproc), remove.c (remove_fileproc): Use fullname
	where we had been (bogusly) omitting the directory from user
	messages.
	* edit.c (unedit_fileproc, edit_fileproc): If we cannot close
	CVSADM_NOTIFY, mention CVSADM_NOTIFY rather than finfo->file in
	error message.
	* rtag.c (rtag_fileproc), tag.c (tag_fileproc): Reindent.
