@@ -74,7 +74,7 @@ status (argc, argv)
       if (local)
 	send_arg("-l");
 
-      send_file_names (argc, argv);
+      send_file_names (argc, argv, SEND_EXPAND_WILD);
       /* XXX This should only need to send file info; the file
 	 contents themselves will not be examined.  */
       send_files (argc, argv, local, 0);
